# balukaa

./: .gitignore  Dockerfile  Dockerfile.alpine  LICENSE  README.md  coursework.md  docker-compose.yml  docker.env  note.md  pg.env  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  run_tests.yaml
balukaa/: entrypoint.sh  manage.py
balukaa/balukaa/: asgi.py  nav_main_list.py  settings.py  urls.py  wsgi.py
balukaa/ledger/: admin.py  forms.py  models.py  tests.py  tests_views.py  urls.py  views.py
balukaa/ledger/management/commands/: fill_db.py  model_t.py  run_faker.py  run_mixer.py  wait_for_db.py
balukaa/ledger/migrations/: 0001_initial.py  0002_auto_20210417_1132.py  0003_auto_20210418_1916.py  0004_auto_20210427_1251.py  0005_auto_20210427_1254.py  0006_auto_20210429_1604.py  0007_alter_entry_entrytype.py
balukaa/ledger/templates/ledger/: about.html  acard.html  account.html  account_balance_report.html  (+13 more)
balukaa/main/: forms.py  models.py  urls.py  views.py
balukaa/main/migrations/: 0001_initial.py  0002_alter_task_options.py
balukaa/registration/: apps.py  forms.py  models.py  urls.py  views.py
balukaa/registration/migrations/: 0001_initial.py
balukaa/templates/: about.html  base.html  home.html
balukaa/templates/includes/: _cart_info.html  _nav.html  _nav_main.html
balukaa/todo/: admin.py  models.py  services.py  todos_list.py  urls.py  views.py
balukaa/todo/migrations/: 0001_initial.py  0002_auto_20210604_1545.py
balukaa/userapp/: admin.py  forms.py  models.py  views.py
balukaa/userapp/migrations/: 0001_initial.py
(+16 files in other folders)
